setup first aws page skeleton

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -2,7 +2,7 @@
 title: "Landing Page"
 ---
 
-Some introduction text. Lists out all the headings from h1 to h6. Easy to customise. Some more text. Additional text.
+Here will live docs to guide readers and keep notes on a learning journey of large scale systems development.
 
 # Heading H1
 Heading 1 text
